fix: container padding on tablet and mobile

--- a/editor-components/stats/stats4/stats4.module.scss
+++ b/editor-components/stats/stats4/stats4.module.scss
@@ -150,6 +150,9 @@
 }
 
 @media only screen and (max-width: 968px) {
+  .container {
+    padding: 20px;
+  }
   .container .max-content {
     flex-direction: column;
   }
@@ -179,6 +182,7 @@
 @media only screen and (max-width: 500px) {
   .container {
     width: 100%;
+    padding: 20px 10px;
   }
   .container .max-content .stats-container .stats {
     flex-direction: column;
